<resources>
    <string name="app_name">MedAnvisa</string>
    <string name="signup">Cadastrar</string>
    <string name="login">Login</string>
    <string name="login_title">Bem vindo de volta</string>
    <string name="login_subtitle">Faça o login para continuar</string>
    <string name="form_email">Email</string>
    <string name="form_password">Senha</string>
    <string name="login_facebook">Login com facebook</string>
    <string name="login_google">Login com google</string>
    <string name="signup_title">Cadastre-se</string>
    <string name="signup_subtitle">Preencha os campos para continuar</string>
    <string name="form_name">Nome</string>
    <string name="search_title">Procure o Remédio</string>
    <string name="medicine_name">Nome do Remédio</string>
    <string name="search_btn">Pesquisar</string>
    <string name="title_activity_teste">TesteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search_medicine">SearchMedicineActivity</string>

    <string name="facebook_app_id">1955389348050909</string>
    <string name="fb_login_protocol_scheme">fb1955389348050909</string>
</resources>
