<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="br.iesb.medanvisa.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_title" />

            <TextView
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/signup_subtitle" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_name"
                    style="@style/InputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_email"
                    style="@style/InputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_password"
                    style="@style/InputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/signup_btn"
                style="@style/ButtonPositive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
