<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="br.iesb.medanvisa.SearchMedicineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title" />

        <TextView
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Digite o nome do remédio" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/InputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medicine_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/InputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Estado"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            style="@style/ButtonPositive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_btn" />


    </LinearLayout>

</ScrollView>
